[gd_scene load_steps=33 format=3 uid="uid://b78min8fkygrg"]

[ext_resource type="Script" path="res://scripts/gd/player_controller.gd" id="1_jcwft"]
[ext_resource type="Resource" uid="uid://bj84cqasxiobd" path="res://scripts/resources/Indicators/Skill/Moving_P1.tres" id="2_oyyrr"]
[ext_resource type="Texture2D" uid="uid://do4mcmq0nu2su" path="res://assets/sprite/Player 2/Portrait_Icon.png" id="3_y66ul"]
[ext_resource type="Resource" uid="uid://bi100idx5gxxv" path="res://scripts/resources/CH/Seriouse_Guy_Fighting_Stats.tres" id="5_qq0or"]
[ext_resource type="Texture2D" uid="uid://jgcn7jkoq8nj" path="res://assets/sprite/Player 2/player_2_sprite_sheet_better.png" id="6_gdeki"]
[ext_resource type="Texture2D" uid="uid://bcftplir4s3jl" path="res://assets/sprite/Player/Current_Player_indicator.png" id="7_fbbuh"]
[ext_resource type="Script" path="res://addons/ProCam2D/scripts/pcam_target.gd" id="8_i45f2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qs5gw"]
radius = 30.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ybsxy"]
atlas = ExtResource("6_gdeki")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4grj"]
atlas = ExtResource("6_gdeki")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h1e1"]
atlas = ExtResource("6_gdeki")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_stte4"]
atlas = ExtResource("6_gdeki")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdxfh"]
atlas = ExtResource("6_gdeki")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_helkb"]
atlas = ExtResource("6_gdeki")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w13yb"]
atlas = ExtResource("6_gdeki")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv1hk"]
atlas = ExtResource("6_gdeki")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kjl4"]
atlas = ExtResource("6_gdeki")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sqbx"]
atlas = ExtResource("6_gdeki")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eiaij"]
atlas = ExtResource("6_gdeki")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj4n3"]
atlas = ExtResource("6_gdeki")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_awjtt"]
atlas = ExtResource("6_gdeki")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2rm4"]
atlas = ExtResource("6_gdeki")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bh4h2"]
atlas = ExtResource("6_gdeki")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5xx3"]
atlas = ExtResource("6_gdeki")
region = Rect2(288, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m5bf"]
atlas = ExtResource("6_gdeki")
region = Rect2(336, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vdku"]
atlas = ExtResource("6_gdeki")
region = Rect2(384, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ineu5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybsxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4grj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h1e1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stte4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdxfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_helkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w13yb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv1hk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kjl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sqbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eiaij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj4n3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awjtt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2rm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bh4h2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5xx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m5bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vdku")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f33j1"]
size = Vector2(12.7778, 11.732)

[sub_resource type="Animation" id="Animation_g3rl5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("character_animator:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_av0wi"]
resource_name = "eng_hit"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.6), Vector2(1, 1), Vector2(1, 0.6), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("character_animator:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.607843, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ev0j6"]
resource_name = "hit"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("character_animator:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(3, 3, 3, 1), Color(1, 1, 1, 1), Color(3, 3, 3, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("character_animator:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.523599, 0.0, 0.523599, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j4d3b"]
_data = {
"RESET": SubResource("Animation_g3rl5"),
"eng_hit": SubResource("Animation_av0wi"),
"hit": SubResource("Animation_ev0j6")
}

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("cam_target") groups=["Player"]]
script = ExtResource("1_jcwft")
indicator = ExtResource("2_oyyrr")
moving_indicator = ExtResource("2_oyyrr")
speed = 350
Fight_stats = ExtResource("5_qq0or")
Turn_portriat = ExtResource("3_y66ul")
cam_target = NodePath("PCamTarget")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 3)
scale = Vector2(1, 0.51)
shape = SubResource("CircleShape2D_qs5gw")

[node name="character_animator" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ineu5")
animation = &"idle"
frame_progress = 0.455017
speed_scale = 4.0
offset = Vector2(0.75, -13)

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -1.4412)
scale = Vector2(1.8, 1.8)
shape = SubResource("RectangleShape2D_f33j1")

[node name="animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j4d3b")
}

[node name="Indicator" type="Sprite2D" parent="."]
visible = false
position = Vector2(3, -59)
scale = Vector2(2, 2)
texture = ExtResource("7_fbbuh")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
debug_path_custom_color = Color(1, 0, 0, 1)

[node name="PCamTarget" type="Node2D" parent="."]
script = ExtResource("8_i45f2")
radius = 150.0
enabled = false
priority = 1

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
